# task_manager

./: .gitignore  README.md
backend/: README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 7641e6d903fd_create_initial_tables.py  d146c193a298_add_initial_data.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: __init__.py  auth.py  task.py  user.py
backend/app/core/: __init__.py  config.py  security.py
backend/app/db/: session.py
backend/app/models/: __init__.py  base.py  task.py  user.py
backend/app/repositories/: base_repository.py  task_repository.py  user_repository.py
backend/app/schemas/: __init__.py  base.py  task.py  user.py
backend/app/services/: task_service.py  user_service.py
