[project]
name = "task-manager"
version = "0.1.0"
description = "FastAPI project for a small task manager within teams"
authors = [
    {name = "Pedro Castro",email = "pedro.tiago.castro.ist@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
